--- a/GoLTWeb/style.css
+++ b/GoLTWeb/style.css
@@ -3,6 +3,7 @@ body {
   height:100%;
   margin:0;
   padding:0;
+  ont-size: 20px;
 }
 
 canvas {
@@ -10,6 +11,12 @@ canvas {
   height:100%;
   display:block;
   image-rendering: pixelated
+}
+
+br {
+  content: " " !important;
+  display: block !important;
+  margin:2px;
 }
 
 .control {
