--- a/GoLTWeb/style.css
+++ b/GoLTWeb/style.css
@@ -1,35 +1,42 @@
-body { 
+body {
   width:100%;
   height:100%;
-  margin:0;
-  padding:0;
   background: #acac;
+  margin:0px;
 }
 
 canvas {
   width:100%;
-  height:100%;
-  display:block;
+  z-index:-1;
+  position:fixed;
+  margin-top:-10px;
   image-rendering: pixelated
 }
 
-br {
-  content: " " !important;
-  display: block !important;
-  margin:2px;
+hr {
+  color:#acac;
 }
 
-hr {
-  color: #acac;
+#createGame {
+  margin-top: 25px;
+  display: block;
 }
 
 .control {
   background: #ffffffa0;
-  padding: 10px;
-  z-index: 1;
-  position: absolute;
-  top: 10px;
-  left: 10px;
+  padding:10px;
+  margin: 10px;
+  width:900px;
+}
+
+#tutorial {
+  top:400px;
+  left:10px;
+}
+
+#presets {
+  top:1550px;
+  left:10px;
 }
 
 #settings {
