--- a/GoLTWeb/style.css
+++ b/GoLTWeb/style.css
@@ -1,3 +1,7 @@
+:root {
+  --gradient: #666666, #666666, #666666, #666666, #bf5b17, #bf5b17, #bf5b17, #bf5b17, #f0027f, #f0027f, #f0027f, #f0027f, #386cb0, #386cb0, #386cb0, #386cb0, #ffff99, #ffff99, #ffff99, #ffff99, #fdc086, #fdc086, #fdc086, #fdc086, #beaed4, #beaed4, #beaed4, #beaed4, #7fc97f, #7fc97f, #7fc97f, #7fc97f;
+}
+
 body {
   width:100%;
   height:100%;
@@ -45,4 +49,17 @@ hr {
 
 #info {
   display: none;
+}
+
+.colorPreview {
+  height: 10px;
+  background: linear-gradient(90deg, var(--gradient));
+  border-color: #ffffffa0;
+}
+
+#gamefieldIcon {
+  height:24px;
+  margin-top:-3px;
+  vertical-align:middle;
+  display: inline-block;
 }
